--- a/index.html
+++ b/index.html
@@ -28,20 +28,16 @@
   <body>
     <div id="main">
       <div id="now"></div>
-      <div id="labels" class="timeline2"></div>
-      <div id="gi-timeline" class="timeline2">
-        <!-- <div class="event" style="--duration: 14; --start: 7">
-          <span>event name</span>
-        </div>
-        <div class="event" style="--duration: 7; --start: 1">event 1</div>
-        <div class="event" style="--duration: 14; --start: 3">event 2</div>
-        <div class="event" style="--duration: 14; --start: 5">event 3</div>
-        <div class="event" style="--duration: 14; --start: 2">event 4</div>
-        <div class="event" style="--duration: 7; --start: 3">event 5</div>
-        <div class="event" style="--duration: 7; --start: 5">event 6</div> -->
+      <div id="labels" class="timeline"></div>
+      <div id="gi-timeline" class="timeline">
+        <div class="timeline-label"><span>Genshin</span></div>
       </div>
-      <div id="hsr-timeline" class="timeline2"></div>
-      <div id="zzz-timeline" class="timeline2"></div>
+      <div id="hsr-timeline" class="timeline">
+        <div class="timeline-label"><span>Star rail</span></div>
+      </div>
+      <div id="zzz-timeline" class="timeline">
+        <div class="timeline-label"><span>Zenless zone zero</span></div>
+      </div>
     </div>
   </body>
 </html>
