improved design, added hi3 support

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <div id="zzz-timeline" class="timeline">
         <div class="timeline-label"><span>Zenless zone zero</span></div>
       </div>
+      <div id="hi3-timeline" class="timeline">
+        <div class="timeline-label"><span>Honkai Impact 3rd</span></div>
+      </div>
+      </div>
     </div>
   </body>
 </html>
