--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <div id="hi3-timeline" class="timeline">
         <div class="timeline-label"><span>Honkai Impact 3rd</span></div>
       </div>
+      <nav>
+        <a href="#gi-timeline">Genshin 3 2 1</a>
+        <a href="#hsr-timeline">Star Rail</a>
+        <a href="#zzz-timeline">ZZZ</a>
+        <a href="#hi3-timeline">Hi 3rd</a>
+      </nav>
       </div>
     </div>
   </body>
